--- a/tmhxdl/src/main/res/layout/hxdl_layout_child2.xml
+++ b/tmhxdl/src/main/res/layout/hxdl_layout_child2.xml
@@ -29,20 +29,31 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:orientation="vertical"
     android:background="@color/white"
-    android:orientation="vertical">
-    <TextView
-        android:id="@+id/tv_name"
+    >
+    <RelativeLayout
+        android:id="@+id/ll_name"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
         android:background="#E7E7E7"
-        android:textColor="#333333"
-        />
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:maxWidth="100dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:textColor="#333333"
+            />
+
+    </RelativeLayout>
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/iv"
         android:layout_width="@dimen/material_100"
+        android:layout_below="@+id/ll_name"
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/material_10"
         android:layout_marginRight="@dimen/material_10"
